assets/css/live.css
    /* ---------------- */
    /* ---   GRID   --- */
    /* ---------------- */

    .grid{
        display: grid;
        grid-template-columns: 4fr 1fr;
        grid-template-rows: 8fr 1fr;
        height: 100vh;
    }
    .content, .topics, .footer{
        border-style: solid;
    }

    .content{
        background: green;        
        overflow:hidden;
        grid-column: 1 / 2;
        grid-row: 1 / 2;
        z-index: 10;                 
    }

    .topics{
        background: black;
        font-size: 3vw;
        grid-column: 2 / 3;
        grid-row: 1 / 2;
        z-index: 9;

        /* creating a nested grid */
        display: grid;
        grid-template-columns: 1fr;
    }

    .footer{
        background: orange;
        overflow:hidden;        
        grid-column: 1 / 3;
        grid-row: 2 / 3;
        z-index: 8;         
        display:flex;
        align-items:center;
        font-size: 4vw;
    }

    #overlay{
        background: black;        
        overflow:hidden;
        grid-column: 1 / 3;
        grid-row: 1 / 3;
        z-index: 14;
        opacity: 0.98;
        color: white; 
        font-family: "Arial Narrow", Helvetica, sans-serif;        
        display: flex;
        justify-content: center;
        align-items: center;
        font-size: 4vw;
    }

    /* -------------------------- */
    /* ---   TITLE OVERLAYS   --- */
    /* -------------------------- */

    .contentTitle, .thumbnailTitle{
        font-family: "Arial Narrow", Helvetica, sans-serif;
        color: white;
        font-weight: 600;
        text-transform: uppercase;        
    }

    .contentTitle{
        overflow:hidden;
        grid-column: 1 / 2;
        grid-row: 1 / 2;
        z-index: 12;   
        display: flex;
        justify-content: center;
        align-items: center;
        font-size: 8vw;        
    }

    .contentTitleBox{
        background: black; 
        opacity: 0.75; 
        color:white; padding:25px 100px 25px 100px;
    }

    .thumbnailTitle{
        /* nested grid */
        grid-column: 1;
        grid-row: 1 / 2; 

        /* style */
        overflow:hidden;
        z-index: 12;   
        display: flex;
        justify-content: center;
        align-items: center;
        font-size: 3vw;        
    }

    .thumbnailTitleBox{
        background: black; 
        opacity: 0.55; 
        color:white; padding:5px 10px 5px 10px;
    }

    /* ------------------ */
    /* ---   TOPICS   --- */
    /* ------------------ */


    .topic, .topicFooter, #timer{
        font-family: "Arial Narrow", Helvetica, sans-serif;
        color: white;
        font-weight: 600;
        text-transform: uppercase;        
        margin-top: 2px;
        margin-bottom: 2px;        
    }

    .topic{
        background: #DC4533;
        padding: 5px;
        text-align: left;
    }

    .topicFooter{
        margin-left: 20px;
    }

    #thumbnail{
        display: block;
        width: 100%; 

        /* nested grid */
        grid-column: 1;
        grid-row: 1 / 2; 
    }

    #timer{
        background:#333333;
        text-align: center;

        /* nested grid */
        grid-column: 1;
        grid-row: 2 / 3;         
    }

    #topicList{
        /* nested grid */
        grid-column: 1;
        grid-row: 3 / 4;
    }


    /* ----------------- */
    /* ---   OTHER   --- */
    /* ----------------- */


    .image{
        width: 100%;
        height: auto;
        object-fit: cover;
    }

    body{
        background: black;
        margin: 0px;
    }

